# py_web_engineering_hw7

./: config.ini  main.py  pyproject.toml
conf/: database.py  models.py
crud_expressions/: search_data.py  update_data.py
data/: fake_data.py
selects/: my_select.py
